apps/keda/templates/operator-prometheus-networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: keda-operator-egress
spec:
  endpointSelector:
    matchLabels:
      app: keda-operator
  egress:
    - toFQDNs:
        - matchName: vm.kilchhofer.info
      toPorts:
        - ports:
            - port: "443"
